# wyc

./: .env.example  Pipfile  README.md  ToDo.md  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  golf_assistant.py
app/core/: config.py
app/db/: base.py
app/db/crud/: golf_assistant.py
app/db/migrations/: env.py
app/db/migrations/versions/: 17cddb5b604b_initial_migration.py
app/db/tables/: golf_assistant.py
app/schemas/: golf_assistant.py
app/services/: livekit_service.py  openai_service.py  tts_service.py
